# typed-typechecker

./: README.md  flake.nix  typedtc.cabal
src/TypedTC/: AST.hs  Checker.hs  Parser.hs
test/: Gen.hs  Main.hs
