cabal-version:   3.6
name:            typedtc
version:         0.1.0.0
license:         NONE
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  TypedTC.Checker
    build-depends:    base ^>=4.16.3.0
                    , HList
                    , singletons
    hs-source-dirs:   src
    default-language: GHC2021

test-suite typed-tc-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.3.0,
        typedtc
