cabal-version:   3.6
name:            typedtc
version:         0.1.0.0
license:         NONE
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  TypedTC.Checker
                      TypedTC.Parser
                      TypedTC.AST
    build-depends:    base ^>=4.16.3.0
                    , HList
                    , text
                    , megaparsec
                    , parser-combinators
    hs-source-dirs:   src
    default-language: GHC2021

test-suite typedtc-test
    import:           warnings
    ghc-options:
        -O2
        -threaded
        -rtsopts
        "-with-rtsopts=-N"
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Gen
    build-depends:
        base ^>=4.16.3.0
      , text
      , megaparsec
      , tasty
      , tasty-hedgehog
      , tasty-hunit
      , hedgehog
      , containers
      , mtl
      , streams
      , hint
      , typedtc
